# min

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  out.ppm
assets/: .gitignore
assets/bunny/: bunny.exr  bunny.xml  scene.json  sphere.json  test.json
assets/cornell_box/: cornell_box.xml  scene.json  test.json
assets/mitsuba/: scene.json
cmake/: Pybind11.cmake
ext/: CMakeLists.txt
include/min-ray/: accel.h  accelerator.h  assets.h  bbox.h  bitmap.h  block.h  bsdf.h  camera.h  color.h  common.h  context.h  defs.h  dpdf.h  emitter.h  film.h  filter.h  frame.h  geometry.h  graph.h  gui.h  integrator.h  interface.h  intersection.h  json.h  json_type.h  light.h  logging.h  material.h  math.h  mesh.h  mesh_importer.h  object.h  parallel.h  parser.h  primitive.h  progress.h  proplist.h  ray.h  renderer.h  rendermode.h  (+14 more)
include/min.ray/: defs.h  interface.h  intersection.h  math.h  mesh.h  primitive.h  spectrum.h
min/: main.cc  tests.cc
min/accelerators/: bvh.cc  bvh.h  naive.cc
min/bsdfs/: diffuse.cc
min/cameras/: perspective.cc
min/common/: interface.h  json.h  json_type.h  memory.h  parallel.h  resolver.h  util.h
min/core/: interface.cc  interfaces.cc  logging.cc  memory.cc  parallel.cc
min/filters/: box.cc
min/gui/: preview_gui.cc  preview_gui.h
min/lights/: diffuse_area.cc  infinite.cc
min/materials/: diffuse.cc  fresnel.h  glass.cc  microfacet.h  mirror.cc
min/math/: linalg.h  math.h  scalar.h
min/renderers/: ao.cc  normals.cc  pt.cc  sample.h  whitted.cc
min/samplers/: random.cc
min/shapes/: obj.cc  sphere.cc  sphere.h  triangle.cc  triangle.h
min/textures/: constants.cc  image.cc
min/visual/: accel.h  aggregate.h  bsdf.h  camera.h  defs.h  distribution.h  film.cc  film.h  filter.h  frame.h  geometry.h  image.cc  image.h  intersection.cc  intersection.h  light.cc  light.h  material.cc  material.h  mipmap.h  renderer.h  rng.h  sampler.h  sampling.h  scene.cc  scene.h  shape.cc  shape.h  spectrum.h  texture.h  transform.h
old/: CMakeLists.txt
old/include/min-ray/: accel.h  bitmap.h  camera.h  defs.h  film.h  integrator.h  interface.h  light.h  logging.h  mesh_importer.h  parallel.h  preview_gui.h  progress.h  ray.h  rng.h  sampler.h  scene.h
old/src/bsdfs/: mirror.cc
old/src/cameras/: perspective.cc
old/src/core/: bitmap.cc  interfaces.cc  logging.cc  mesh.cc  preview_gui.cc  scene.cc  warp.cc
old/src/core/accelerators/: brute.h  sahbvh.cc  sahbvh.h
old/src/core/bsdfs/: diffuse.h  oren_nayar.h
old/src/core/integrators/: path.h
old/src/core/lights/: diffuse_area.h
old/src/core/materials/: matte.h
old/src/core/samplers/: random.h
old/src/core/shapes/: mesh.cc  sphere.cc  sphere.h  triangle.cc
old/src/filters/: mitchell.cc
old/src/integrators/: path.cc
old/src/renderers/: blockwise.cc
old/src/standalone/: main.cc
src/: accel.cpp  bitmap.cpp  dielectric.cpp  diffuse.cpp  gui.cpp  main.cc  main.cpp  mesh.cpp  mirror.cpp  normals.cpp  obj.cpp  object.cpp  parser.cpp  progressive.cpp  scene.cpp
src/accelerators/: accel.cc  bvh.cc
src/bsdfs/: dielectric.cc  diffuse.cc  microfacet.cc  mirror.cc
src/cameras/: perspective.cc
src/core/: assets.cc  bitmap.cc  block.cc  common.cc  film.cc  graph.cc  gui.cc  interface.cc  interfaces.cc  intersection.cc  logging.cc  mesh.cc  obj.cc  object.cc  parallel.cc  parser.cc  proplist.cc  rfilter.cc  sampling.cc  scene.cc  spectrum.cc  transform.cc  warp.cc
src/core/accelerators/: brute.h  sahbvh.cc  sahbvh.h
src/core/bsdfs/: diffuse.cc  diffuse.h  lambertian.h  oren_nayar.h
src/core/cameras/: perspective.cc  perspective.h
src/core/importers/: wavefront.cc  wavefront.h
src/core/integrators/: ao.cc  ao.h  path.cc
src/core/lights/: diffuse_area.cc  diffuse_area.h
src/core/materials/: diffuse.h  matte.h
src/core/samplers/: random.cc  random.h
src/core/shaders/: common.h
src/core/shapes/: sphere.cc  sphere.h  triangle.cc  triangle.h
src/core/textures/: constant.h
src/core_/: interfaces.cc
src/filters/: box.cc  filter.cc  gussian.cc  mitchell.cc  rfilter.cc  tent.cc
src/integrators/: ao.cc  normals.cc  path.cc
src/lights/: area_light.cc
src/meshes/: obj.cc
src/renderers/: blockwise.cc  progressive.cc
src/samplers/: independent.cc
src/standalone/: main.cc
src/textures/: constant.cc
tests/: test.cc  test_importer.cc  test_object.cc
